more logger name fixes and Integer constructor mutation